2005-12-26  Guilhem Lavaux  <guilhem@kaffe.org>

	* replace/ifaddrs_bsd.c: Initialize ifap in case of error.

2005-12-26  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/jit3/machine.h,
	kaffe/kaffevm/jit3/machine.c
	(KaffeJIT3_exitWithOOM,
	KaffeJIT3_setupExitWithOOM): New functions.
	(KaffeJIT3_cleanupInsnSequence): New function.
	(translate): Handle OOM cleanly.
	
	* kaffe/kaffevm/jit3/seq.c,
	kaffe/kaffevm/jit3/labels.c,
	kaffe/kaffevm/jit3/constpool.c,
	kaffe/kaffevm/jit3/global-regs.c:
	Throw an OOM if there is no memory anymore (instead
	of crashing the VM with an assert).

	* kaffe/kaffevm/jit/native-wrapper.c
	(startJNI): Throw an OOM if it is not possible to allocate
	a new local ref table.
	(Kaffe_wrapper): Handle OOM cleanly.

	* kaffe/kaffevm/jit/machine.c
	(KaffeJIT_exitWithOOM, KaffeJIT_setupExitWithOOM,
	KaffeJIT_cleanupInsnSequence): New functions.
	
2005-12-26  Riccardo Mottola  <riccardo@kaffe.org>

	* config/config-io.h,
	config/config-math.h,
	config/config-mem.h,
	config/config-net.h,
	config/config-setjmp.h,
	config/config-signal.h:
	added include of config.h

	* config/config.alias,
	config/powerpc/atomic.h,
	config/powerpc/bits/atomic.h:
	added support for POWER cpu

2005-12-26  Riccardo Mottola  <riccardo@kaffe.org>
	* config/sparc/atomic-sparc32v9.h, config/sparc/atomic-sparc64.h:
	fix includes
	* config/sparc/common.h:
	change ifdef order to get 64 bit include 64bit file

2005-12-25  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/locks.c (putHeavyLock): Use atomic ops to assign hLockHolder
	and in_progress.

2005-12-25  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/locks.h (struct _iLock): Made holder volatile to fix compiler warnings.

	* kaffe/kaffevm/locks.c (locks_internal_slowUnlockMutexIfHeld, locks_internal_waitCond):
	Made holder volatile to fix compiler warnings.

2005-12-25  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: (--disable-classpath-tools) Added switch to disable 